# Gnosis-TMS-tauri-app

./: .broker  .gitignore  AGENTS.md  AGENTS_EVIDENCE.md  AI_REVIEW_AND_KEY_PLAN.md  AI_TRANSLATE_ALL_PLAN.md  APP_MODERNIZATION_PLAN.md  CHAPTER_DERIVED_GLOSSARY_PLAN.md  CLA.md  CONNECTION_ERROR_HANDLING_SPEC.md  CONTRIBUTING.md  DERIVE_GLOSSARIES_PLAN.md  DOCX_IMPORT_PLAN.md  DOWNLOADS_PAGE_SETUP.md  EDITOR_BACKGROUND_SYNC_PLAN.md  EDITOR_BACKGROUND_SYNC_TEST_PLAN.md  EDITOR_CLEANUP_COMPLETION_PLAN.md  EDITOR_COMMENTS_PLAN.md  EDITOR_FOOTNOTES_PLAN.md  EDITOR_IMAGES_PLAN.md  EDITOR_OFFLINE_AI_AND_NETWORK_ACTIONS_PLAN.md  EDITOR_RENDER_TIME_GLOSSARY_HIGHLIGHT_PLAN.md  EDITOR_ROW_INSERT_DELETE_PLAN.md  EDITOR_SEARCH_FILTER_PLAN.md  EDITOR_VIRTUALIZATION_REFACTOR_PLAN.md  GITHUB_APP_TEST_SETUP.md  GLOSSARY_IMPLEMENTATION_PLAN.md  GLOSSARY_SOURCE_TRANSLATION_PLAN.md  GLOSSARY_TANSTACK_QUERY_PLAN.md  GLOSSARY_TERM_OPTIMISTIC_SAVE_PLAN.md  GLOSSARY_WRITE_COORDINATOR_PLAN.md  LARGE_FILE_SPLIT_IMPLEMENTATION_PLAN.md  LOCAL_SYNC_CONFLICT_INVENTORY.md  LOCAL_SYNC_CONFLICT_RULES.md  MEMBERS_PAGE_DETAILED_IMPLEMENTATION_PLAN.md  MEMBERS_PAGE_MODERNIZATION_PLAN.md  MERGE_CONFLICT_DATA_TYPES.md  MULTI_FILE_PROJECT_UPLOAD_PLAN.md  NON_SPACE_DELIMITED_GLOSSARY_MATCHING_PLAN.md  ONLINE_OPERATION_FAILURE_PLAN.md  (+26 more)
src-tauri/: AGENTS.md  AGENTS_EVIDENCE.md  Cargo.toml  about.hbs  about.toml  deny.toml  tauri.conf.json  tauri.macos.conf.json  updater-public-key.txt
src-tauri/capabilities/: default.json
src-tauri/dmg/: apply-dmg-file-icon.sh  background.af  background.tiff
src-tauri/icons/: README.md  icon.af  icon.icns  sync-all-icons.sh  sync-generated-icons.sh  sync-macos-icons.sh
src-tauri/icons/macos/: icon.icns
src-tauri/resources/: THIRD-PARTY-NOTICES.md
src-tauri/src/: ai_secret_storage.rs  auth.rs  auth_storage.rs  broker.rs  broker_auth.rs  broker_auth_storage.rs  callbacks.rs  constants.rs  drafts.rs  git_commit.rs  github.rs  github_app_test.rs  glossary_repo_sync.rs  glossary_storage.rs  insecure_github_app_config.rs  installation_access.rs  lib.rs  local_repo_sync_state.rs  main.rs  project_import.rs  project_repo_paths.rs  project_repo_sync.rs  project_search.rs  qa_list_repo_sync.rs  repo_app_version.rs  repo_layout_metadata.rs  repo_migrations.rs  repo_resource_storage.rs  repo_resource_sync.rs  repo_sync_shared.rs  short_path_names.rs  state.rs  storage_paths.rs  store.rs  team_ai.rs  team_metadata_local.rs  team_repo_migrations.rs  updater.rs  util.rs  vellum_clipboard.rs  (+1 more)
src-tauri/src/ai/: mod.rs  types.rs
src-tauri/src/github/: app_auth.rs  orgs.rs  repos.rs  types.rs
src-tauri/src/glossary_storage/: io.rs  mod.rs  terms.rs  tmx.rs
src-tauri/src/project_import/: chapter_editor.rs  chapter_editor_comments.rs  chapter_import.rs  chapter_lifecycle.rs  link_import.rs  project_git.rs
src-tauri/src/project_search/: discovery.rs  indexer.rs  mod.rs  query.rs  refresh.rs  schema.rs  scoring.rs
src-tauri/src/qa_list_storage/: io.rs  mod.rs  terms.rs  tmx.rs
src-tauri/src/team_metadata_local/: mutations.rs  records.rs  repair.rs  repo.rs
src-tauri/src/wordpress/: auth.rs  mod.rs  (+4 more)
(+975 files in other folders)
