[package]
name = "gnosis-tms"
version = "0.8.21"
description = "Gnosis TMS"
authors = ["you"]
edition = "2021"

[lib]
name = "gnosis_tms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
url = "2"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v7", "serde"] }
tauri-plugin-store = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
iota_stronghold = "2"
calamine = "0.26"
quick-xml = "0.31"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
zeroize = "1"
regex = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "=2.4.2", default-features = false, features = ["deflate-flate2"] }
readabilityrs = "0.1.3"
scraper = "0.25"
